[project]
name = "broadcast_server_perintyler"
version = "0.0.1"
authors = [
  { name="Tyler Perin", email="tyler@perin.email" },
]
description = "Websocket Broadcast Server"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/perintyler/broadcast_server"